# STaRN

./: .gitignore  README.md  ablation.py  eval.py  eval_only_tab.py  eval_with_uni.py  run.py  train.py  visualize.py
.RaPaCL/: .gitignore  README.md  pyproject.toml
.RaPaCL/baselines/common/: config.py
.RaPaCL/baselines/configs/: img2rad.yaml
.RaPaCL/baselines/img2rad/: __init__.py  engine.py  evaluator.py  model.py
.RaPaCL/baselines/scripts/: run_img2rad_arch_ablation.sh  run_img2rad_filter-prefix_ablation.sh
.RaPaCL/baselines/stnet/: __init__.py  dataset.py  stnet.py
.RaPaCL/dataset/: download_hest.py  extract_genes.py
.RaPaCL/dataset/configs/: download_hestbenchh5.yaml
.RaPaCL/rapacl/: _gene_analysis.py  _plot_rad_redundancy.py  _shap_analysis.py  run.py
.RaPaCL/rapacl/configs/default/: train.py
.RaPaCL/rapacl/engines/: trainer_utils.py
.RaPaCL/rapacl/model/: rapacl_uni.py
.RaPaCL/rapacl/model/patchenc/: _resnet.py  build.py
.RaPaCL/rapacl/model/radtranstab/: _embed.py  _encoder.py  _head.py  _radtranstab.py  _token.py  _transtab.py  build.py
RaPaCL/: .gitignore
RaPaCL/dataset/: README.md
RaPaCL/rapacl/: _uni_mlp.py  (+4 more)
STaRN/: .gitignore  README.md  ablation.py  extractemb.py  train.py
baselines/: README.md
configs/: config.py
dataset/: loader.py
model/: __init__.py  loss.py  tabular.py
rapacl/: _gene_analysis.py  _gene_analysis_hotspot.py  _plot_rad_redundancy.py  _plot_rank.py  _plot_uni_rank.py  _radtranstab_mlp.py  _uni_ablation.py  _uni_singlefold_ablation.py  ablation.py  analysis.py  run.py
utils/: __init__.py  ddp.py
(+50 files in other folders)
